#test #pair[smc397, lcg37]  attempted to get controller tess working. However, we gave up as it was becoming too difficult